--- a/Receptuppgift/css/styles.css
+++ b/Receptuppgift/css/styles.css
@@ -4,6 +4,7 @@ body {
   grid-template-rows: 1fr 2fr 4fr 0.2fr;
   gap: 8px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #FFDDB5;
 }
 
 header {
@@ -51,9 +52,9 @@ sidebar {
   grid-row: 3;
   background-color: #FFBF74;
   border-radius: 7px;
-  font-size: 150%;
+  font-size: 170%;
 }
-sidebar > h2 {
+sidebar > h3 {
   text-align: center;
   font-weight: bolder;
 }
@@ -63,6 +64,15 @@ main {
   grid-row: 3;
   background-color: #DBA507;
   border-radius: 7px;
+  font-size: 160%;
+}
+
+main > ol {
+  margin: 50px;
+}
+
+main > ol > li {
+  margin-bottom: 20px;
 }
 
 article {
@@ -76,6 +86,11 @@ article {
 article > h2 {
   text-decoration: underline;
   font-size: 40px;
+}
+
+article > p {
+  font-size: 30px;
+  margin-bottom: 100px;
 }
 
 footer {
