--- a/Receptuppgift/css/styles.css
+++ b/Receptuppgift/css/styles.css
@@ -5,20 +5,19 @@ body {
   gap: 8px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #FFDDB5;
+  margin: 0;
 }
 
 header {
-  grid-column: 2;
+  grid-column: 1/4;
   grid-row: 1;
   background-color: #EB7F00;
-  border-radius: 7px;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 60px;
-  margin-right: 60px;
   font-size: 120%;
+  width: 100%;
 }
 
 aside {
@@ -81,6 +80,7 @@ article {
   background-color: #FFBF74;
   border-radius: 7px;
   text-align: center;
+  margin-right: 8px;
 }
 
 article > h2 {
@@ -90,11 +90,15 @@ article > h2 {
 
 article > p {
   font-size: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 100px; 
 }
 
 footer {
   grid-column: 2;
   grid-row: 4;
   text-align: center;
+}
+
+aside, sidebar {
+  margin-left: 8px;
 }
