--- a/Receptuppgift/css/styles.css
+++ b/Receptuppgift/css/styles.css
@@ -1,11 +1,14 @@
 body {
+  margin: 0;
+}
+
+.box-grid {
   display: grid;
   grid-template-columns: 1fr 2.5fr 1fr;
   grid-template-rows: 1fr 2fr 4fr 0.2fr;
   gap: 8px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #FFDDB5;
-  margin: 0;
 }
 
 header {
@@ -18,6 +21,7 @@ header {
   justify-content: center;
   font-size: 120%;
   width: 100%;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 
 aside {
@@ -101,4 +105,17 @@ footer {
 
 aside, sidebar {
   margin-left: 8px;
+}
+
+.buttons {
+  background-color: #EB7F00;
+  border: solid 3px #EB7F00;
+  border-radius: 8px;
+}
+
+.buttons:hover {
+  background-color: #df9949;
+  border: solid 3px #df9949;
+  cursor: pointer;
+  color: rgb(33, 32, 32);
 }
