--- a/Webbshop/css/styles.css
+++ b/Webbshop/css/styles.css
@@ -4,38 +4,338 @@
   align-items: center;
 }
 
+body {
+  margin: 0;
+  overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+header {
+  background-color: #46AAC9;
+  font-family: Baumans, Arial;
+  font-size: 3.2vw;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.checkout-button:hover {
+  cursor: pointer;
+}
+
+.checkout-button {
+  position: relative;
+  margin-right: 3vw;
+}
+
+.checkout-button-img {
+  width: 12vw;
+  vertical-align: middle;
+  border: 2px solid black;
+  border-radius: 80px;
+  position:relative;
+}
+
+nav {
+  background-color: #8ACACE;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 5vh;
+}
+
+nav > a {
+  color: black;
+  font-family: ABeeZee, Arial;
+  font-size: 3vw;
+}
+
+nav > a:hover {
+  color: white;
+}
+
 #items {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  padding-top: 2vh;
+  gap: 2vh;
+  overflow-y: scroll;
+  height: 80vh;
+  margin-bottom: 6vh;
+}
+
+#items::-webkit-scrollbar {
+  display: none;
 }
 
 .item {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  width: 7vw;
-  padding: 1vw;
-  background-color: lightcyan;
-  border-radius: 15px;
-}
-
-.item > * {
-  margin: 2px;
+  width: 80vw;
+  padding: 3vw;
+  background-color: #D9D9D9;
+  border-radius: 4px;
+  font-family: ABeeZee, Arial, Helvetica, sans-serif;
 }
 
 .item > img {
-  height: 6vw;
+  width: 47%;
+  height: auto;
   border: 3px solid gray;
   border-radius: 5px;
 }
 
+.info-div {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  margin: 2vw;
+  align-items: center;
+  padding: 0px;
+  margin-top: 0;
+  margin-left: 4vw;
+}
+
 .item-name {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: bold;
+  font-size: 6vw;
+  height: 10%;
+  margin: 5%;
 }
 
 .item-desc {
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  margin-top: 10%;
+  width: 90%;
+  font-size: 3vw;
 }
 
 .item-price {
+  margin-bottom: 0;
+  align-self: flex-end;
+  margin-right: 1vw;
+}
+
+.item-button {
+  background-color: #078FDB;
+  color: white;
+  font-family: ABeeZee, Arial, Helvetica, sans-serif;
+  border: 0;
+  padding: 7px 20px 7px 20px;
+  font-size: 3.5vw;
+}
+
+.item-button:hover {
+  cursor: pointer;
+  background-color: #45a2d8;
+}
+
+footer {
+  display: flex;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  background-color: #D9D9D9;
+  border: 1px solid black;
+  height: 5vh;
+  font-size: 2.3vh;
+}
+
+.counter {
+  height: 6vw;
+  width: 6vw;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  right:-5px;
+  top:-5px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.counter > p {
+  text-align: center;
+  color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+@media screen and (min-width: 641px) {
+  body {
+    overflow-y: visible;
+  }
+
+  #items {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+    padding-bottom: 4vh;
+  }
+
+  .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 38vw;
+    height: auto;
+    padding: 3vw;
+    background-color: #D9D9D9;
+    border-radius: 4px;
+  }
+  
+  .item > img {
+    width: 95%;
+    border: 3px solid gray;
+    border-radius: 5px;
+  }
+  
+  .info-div {
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 2vw;
+    align-items: center;
+    padding: 0px;
+    margin-top: 0;
+  }
+ 
+  .item-name {
+    font-weight: bold;
+    font-size: 390%;
+    height: 10%;
+    margin: 5%;
+  }
+  
+  .item-desc {
+    margin: 0;
+    margin-top: 10%;
+    width: 90%;
+    font-size: 2.5vw;
+    height: 70%;
+  }
+  
+  .item-price {
+    margin-bottom: 0;
+    align-self: flex-end;
+    margin-right: 1vw;
+    font-size: 2.5vw;
+  }
+  
+  .item-button {
+    background-color: #078FDB;
+    color: white;
+    font-family: ABeeZee, Arial, Helvetica, sans-serif;
+    border: 0;
+    padding: 7px 20px 7px 20px;
+    font-size: 3.5vw;
+    align-self: flex-end;
+  }
+}
+
+@media screen and (min-width: 1008px) {
+  #items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+    overflow-y: scroll;
+  }
+
+  .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 15vw;
+    height: auto;
+    padding: 1.5vw;
+    background-color: #D9D9D9;
+    border-radius: 4px;
+    justify-self: center;
+  }
+  
+  .item > img {
+    width: 95%;
+    height: auto;
+    border: 3px solid gray;
+    border-radius: 5px;
+  }
+  
+  .info-div {
+    height: 90%;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    margin: 2vw;
+    align-items: center;
+    padding: 0px;
+    margin-top: 0;
+  }
+ 
+  .item-name {
+    font-weight: bold;
+    font-size: 200%;
+    height: 10%;
+    margin: 5%;
+  }
+  
+  .item-desc {
+    margin: 0;
+    margin-top: 10%;
+    width: 90%;
+    font-size: 1.3vw;
+  }
+  
+  .item-price {
+    margin-bottom: 0;
+    align-self: flex-end;
+    margin-right: 1vw;
+    font-size: 1.3vw;
+  }
+  
+  .item-button {
+    background-color: #078FDB;
+    color: white;
+    font-family: ABeeZee, Arial, Helvetica, sans-serif;
+    border: 0;
+    padding: 7px 20px 7px 20px;
+    font-size: 1.3vw;
+  }
+
+  header {
+    height: 13vh;
+    font-size: 2vw;
+  }
+  
+  nav > a {
+    font-size: 100%;
+  }
+
+  .checkout-button {
+    height: 9vh;
+    width: auto;
+  }
+
+  .checkout-button-img {
+    height: 100%;
+    width: auto;
+  }
+
+  .counter {
+    height: 50%;
+    width: 50%;
+    font-size: 75%;
+  } 
 }
