--- a/Webbshop/css/checkout.css
+++ b/Webbshop/css/checkout.css
@@ -33,7 +33,7 @@ header {
   margin-right: 3vw;
 }
 
-.checkout-button-img {
+.checkout-button > img {
   width: 12vw;
   vertical-align: middle;
   border: 2px solid black;
@@ -55,82 +55,6 @@ nav > a {
   color: black;
   font-family: ABeeZee, Arial;
   font-size: 3vw;
-}
-
-#items {
-  display: flex;
-  flex-direction: column;
-  padding-top: 2vh;
-  gap: 2vh;
-  overflow-y: scroll;
-  height: 80vh;
-  margin-bottom: 6vh;
-}
-
-#items::-webkit-scrollbar {
-  display: none;
-}
-
-.item {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 80vw;
-  padding: 3vw;
-  background-color: #D9D9D9;
-  border-radius: 4px;
-  font-family: ABeeZee, Arial, Helvetica, sans-serif;
-}
-
-.item > img {
-  width: 47%;
-  height: auto;
-  border: 3px solid gray;
-  border-radius: 5px;
-}
-
-.info-div {
-  height: 90%;
-  display: flex;
-  flex-direction: column;
-  margin: 2vw;
-  align-items: center;
-  padding: 0px;
-  margin-top: 0;
-  margin-left: 4vw;
-}
-
-.item-name {
-  font-weight: bold;
-  font-size: 6vw;
-  height: 10%;
-  margin: 5%;
-}
-
-.item-desc {
-  margin: 0;
-  margin-top: 10%;
-  width: 90%;
-  font-size: 3vw;
-}
-
-.item-price {
-  margin-bottom: 0;
-  align-self: flex-end;
-  margin-right: 1vw;
-}
-
-.item-button {
-  background-color: #078FDB;
-  color: white;
-  font-family: ABeeZee, Arial, Helvetica, sans-serif;
-  border: 0;
-  padding: 7px 20px 7px 20px;
-  font-size: 3.5vw;
-}
-
-.item-button:hover {
-  cursor: pointer;
 }
 
 footer {
@@ -174,7 +98,7 @@ footer {
   border-radius: 5px;
   min-width: 40vw;
   font-family: Baumans, Arial;
-  font-size: 1.3vw;
+  font-size: 1rem;
 }
 
 .cart > h2 {
@@ -188,159 +112,18 @@ footer {
   min-width: 40vw;
   min-height: 6vh;
   font-family: Baumans, Arial;
-  font-size: 2vw;
+  font-size: 1rem;
   font-weight: bold;
   display: flex;
   align-items: center;
   justify-content: center;
 } 
 
-@media screen and (min-width: 641px) {
-  body {
-    overflow-y: visible;
-  }
-
-  #items {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 100%;
-    padding-bottom: 4vh;
-  }
-
-  .item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 38vw;
-    height: auto;
-    padding: 3vw;
-    background-color: #D9D9D9;
-    border-radius: 4px;
-  }
-  
-  .item > img {
-    width: 95%;
-    border: 3px solid gray;
-    border-radius: 5px;
-  }
-  
-  .info-div {
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    margin: 2vw;
-    align-items: center;
-    padding: 0px;
-    margin-top: 0;
-  }
- 
-  .item-name {
-    font-weight: bold;
-    font-size: 390%;
-    height: 10%;
-    margin: 5%;
-  }
-  
-  .item-desc {
-    margin: 0;
-    margin-top: 10%;
-    width: 90%;
-    font-size: 2.5vw;
-    height: 70%;
-  }
-  
-  .item-price {
-    margin-bottom: 0;
-    align-self: flex-end;
-    margin-right: 1vw;
-    font-size: 2.5vw;
-  }
-  
-  .item-button {
-    background-color: #078FDB;
-    color: white;
-    font-family: ABeeZee, Arial, Helvetica, sans-serif;
-    border: 0;
-    padding: 7px 20px 7px 20px;
-    font-size: 3.5vw;
-    align-self: flex-end;
-  }
-}
-
 button {
   margin: 0.5vh;
 }
 
 @media screen and (min-width: 1008px) {
-  #items {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    width: 100%;
-    overflow-y: scroll;
-  }
-
-  .item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 15vw;
-    height: auto;
-    padding: 1.5vw;
-    background-color: #D9D9D9;
-    border-radius: 4px;
-    justify-self: center;
-  }
-  
-  .item > img {
-    width: 95%;
-    height: auto;
-    border: 3px solid gray;
-    border-radius: 5px;
-  }
-  
-  .info-div {
-    height: 90%;
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-    margin: 2vw;
-    align-items: center;
-    padding: 0px;
-    margin-top: 0;
-  }
- 
-  .item-name {
-    font-weight: bold;
-    font-size: 200%;
-    height: 10%;
-    margin: 5%;
-  }
-  
-  .item-desc {
-    margin: 0;
-    margin-top: 10%;
-    width: 90%;
-    font-size: 1.3vw;
-  }
-  
-  .item-price {
-    margin-bottom: 0;
-    align-self: flex-end;
-    margin-right: 1vw;
-    font-size: 1.3vw;
-  }
-  
-  .item-button {
-    background-color: #078FDB;
-    color: white;
-    font-family: ABeeZee, Arial, Helvetica, sans-serif;
-    border: 0;
-    padding: 7px 20px 7px 20px;
-    font-size: 1.3vw;
-  }
-
   header {
     height: 13vh;
     font-size: 2vw;
@@ -355,7 +138,7 @@ button {
     width: auto;
   }
 
-  .checkout-button-img {
+  .checkout-button > img {
     height: 100%;
     width: auto;
   }
