--- a/Webbshop/css/styles.css
+++ b/Webbshop/css/styles.css
@@ -33,7 +33,7 @@ header {
   margin-right: 3vw;
 }
 
-.checkout-button-img {
+.checkout-button > img {
   width: 12vw;
   vertical-align: middle;
   border: 2px solid black;
@@ -104,7 +104,7 @@ nav > a:hover {
   margin-left: 4vw;
 }
 
-.item-name {
+.item > h2 {
   font-weight: bold;
   font-size: 6vw;
   height: 10%;
@@ -212,7 +212,7 @@ footer {
     margin-top: 0;
   }
  
-  .item-name {
+  .item > h2 {
     font-weight: bold;
     font-size: 390%;
     height: 10%;
@@ -221,7 +221,7 @@ footer {
   
   .item-desc {
     margin: 0;
-    margin-top: 10%;
+    margin-top: 15%;
     width: 90%;
     font-size: 2.5vw;
     height: 70%;
@@ -284,7 +284,7 @@ footer {
     margin-top: 0;
   }
  
-  .item-name {
+  .item > h2 {
     font-weight: bold;
     font-size: 200%;
     height: 10%;
@@ -328,7 +328,7 @@ footer {
     width: auto;
   }
 
-  .checkout-button-img {
+  .checkout-button > img {
     height: 100%;
     width: auto;
   }
